--- a/README.rdoc
+++ b/README.rdoc
@@ -28,7 +28,7 @@
 different organizations. No problem.  10AnC comes with some easy-peasy rake tools to do just that.
 
 Spose your new tenant is named 'acme', then...
-  rake schema:reset TENANT_NAME=acme
+  rake tenant:reset TENANT_NAME=acme
 
 This automatically creates the schema 'acme', migrates that schema to current state and then
 seeds that schema with data. Piece O Cake.
